fix styling issue of send again button
the button appears below the response section when scrolling down.

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -370,6 +370,7 @@ fieldset#history {
     position: fixed;
     top: 16px;
     right: 16px;
+    z-index: 1;
 
     #hidden-message {
       display: block;
